--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Modificar.cshtml
@@ -185,3 +185,12 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script>
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["pre_IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["pre_fecha"] = moment(Fecha_Retiro.GetDate()).format('DD/MM/YYYY');
+    }
+</script>
