--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Anular.cshtml
@@ -107,6 +107,13 @@
         GridView_cheque_op.PerformCallback();
     }
 
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["pre_IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+    }
 </script>
 
 @using (Html.BeginForm("Anular", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
