--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
@@ -42,9 +42,8 @@
             e.NewValues["IdProducto"] = "";
             e.NewValues["IdUnidadMedida"] = "UNID";
             e.NewValues["IdCod_Impuesto"] = "";
-            e.NewValues["Cantidad"] = "";
-            e.NewValues["CostoUni"] = "";
-            e.NewValues["PorDescuento"] = "0";
+            e.NewValues["do_Cantidad"] = "1";
+            e.NewValues["do_porc_des"] = "0";
         };
         settings.Columns.Add(column =>
         {
