--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_ordenes_pagos_con_saldo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_ordenes_pagos_con_saldo.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_ordenes_pagos_con_saldo";
         settings.CallbackRouteValues = new { Controller = "NotaCredito", Action = "GridViewPartial_ordenes_pagos_con_saldo" };
-        settings.KeyFieldName = "IdOrdenPago";
+        settings.KeyFieldName = "IdOrdenPago_op";
         settings.Width = Unit.Percentage(100);
         //CConfiguracion responsive
 
@@ -26,73 +26,27 @@
         settings.CommandColumn.ShowSelectCheckbox = true;
         settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
 
+        settings.Columns.Add("IdOrdenPago_op", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("Referencia", "# Documento").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
-            column.Caption = "*";
-            column.FieldName = "seleccionado";
-            column.ColumnType = MVCxGridViewColumnType.CheckBox;
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(2);
-            column.Visible = false;
-        });
-
-
-
-        settings.Columns.Add("Nom_Beneficiario", "Beneficiario").Width=Unit.Percentage(40);
-        //  settings.Columns.Add("Observacion","Observación").Width = Unit.Percentage(30);
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Fecha_Pago";
-            column.Caption = "Fecha pago";
-            column.Width = Unit.Percentage(15);
-            column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-            });
-        });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Valor_a_pagar";
-            column.Caption = "$Valor a pagar";
             column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
+            column.FieldName = "Fecha_Fa_Prov";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Total_cancelado_OP";
-            column.Caption = "$Valor cancelado";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
+            column.Width = Unit.Percentage(40);
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Beneficiario";
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Saldo_x_Pagar_OP";
-            column.Caption = "$Saldo op";
             column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
+            column.FieldName = "MontoAplicado";
+            column.Caption = "Valor aprobado";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
 
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
